# sdk-connectedhomeip

./: .gitignore  .gitmodules  .restyled.yaml  CODEOWNERS
.github/: .wordlist.txt  PULL_REQUEST_TEMPLATE.md
.github/workflows/: android.yaml  bloat_check.yaml  build.yaml  check-data-model-directory-updates.yaml  chef.yaml  cirque.yaml  create-manifest-pr.yaml  darwin-tests.yaml  darwin.yaml  docbuild.yaml  doxygen.yaml  example-tv-casting-darwin.yaml  examples-ameba.yaml  examples-asr.yaml  examples-bouffalolab.yaml  examples-cc13x2x7_26x2x7.yaml  examples-cc13xx_26xx.yaml  examples-cc32xx.yaml  examples-efr32.yaml  examples-esp32.yaml  examples-infineon.yaml  examples-k32w.yaml  examples-linux-arm.yaml  examples-linux-imx.yaml  examples-linux-standalone.yaml  examples-linux-tv-casting-app.yaml  examples-mbed.yaml  examples-mw320.yaml  examples-nrfconnect.yaml  examples-nuttx.yaml  examples-nxp.yaml  examples-openiotsdk.yaml  examples-qpg.yaml  examples-realtek.yaml  examples-stm32.yaml  examples-telink.yaml  examples-tizen.yaml  full-android.yaml  fuzzing-build.yaml  gradle-wrapper-validation.yml  (+18 more)
build_overrides/: pigweed_environment.gni
config/nrfconnect/: .nrfconnect-recommended-revision
config/zephyr/: Kconfig
docs/: requirements.txt
docs/guides/: BUILDING.md  chip_tool_guide.md  nrfconnect_android_commissioning.md  nrfconnect_examples_cli.md  nrfconnect_examples_configuration.md  nrfconnect_factory_data_configuration.md
examples/chip-tool/: BUILD.gn  README.md
examples/providers/: DeviceInfoProviderImpl.cpp  DeviceInfoProviderImpl.h
scripts/: build_python.sh  codegen.py  constraints.txt  requirements.nrfconnect.txt  requirements.txt
scripts/setup/: constraints.txt  requirements.esp32.txt  requirements.nrfconnect.txt
scripts/tools/: check_includes_config.py  zap_regen_all.py
scripts/west/: west-commands.yml  zap_append.py  zap_common.py  zap_generate.py  zap_gui.py  zap_install.py  zap_sync.py
src/access/: AccessControl.cpp
src/app/: AttributeAccessInterface.cpp  AttributeAccessInterface.h  BUILD.gn  ClusterStateCache.h  CommandHandler.cpp  DefaultAttributePersistenceProvider.cpp  DeviceProxy.h  FailSafeContext.cpp  FailSafeContext.h  InteractionModelEngine.cpp  InteractionModelEngine.h  OperationalDeviceProxy.cpp  ReadClient.cpp  ReadClient.h  chip_data_model.cmake  chip_data_model.gni  chip_data_model_static.cmake  common_flags.gni  zap_cluster_list.json
src/controller/: AutoCommissioner.cpp  CHIPDeviceController.cpp  (+3 more)
src/lib/dnssd/: Advertiser.cpp  Advertiser.h  Advertiser_ImplMinimalMdns.cpp  BUILD.gn  Discovery_ImplPlatform.cpp  Discovery_ImplPlatform.h  Resolver.cpp  Resolver.h  Resolver_ImplMinimalMdns.cpp  Resolver_ImplNone.cpp
zephyr/: module.yml
(+701 files in other folders)
